--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,20 +1,55 @@
 <%- include("partials/LandingPageHeader.ejs") %>
 
-          <div class="container col-xxl-9 py-5">
-               <div class="row flex-lg-row-reverse align-items-center">
-                    <div class="col-10 col-sm-8 col-lg-6" style="margin: auto;">
-                         <img src="/images/landingpage.svg" class="d-block mx-lg-auto img-fluid" alt="Zero Hunger Initiative" loading="lazy" />
+          <div class="container col-xxl-9 text-white text-center p-5">
+               <p style="font-size: clamp(80px,10vw,150px) ; line-height: 1;" class="fw-bold p-0 mt-5">PROJECT SEED</p>
+               <p style="font-size: clamp(10px,10vw,30px);" class="fw-lighter">JELLY ACE GROUP</p>
+               <button class="discover-btn btn">DISCOVER</button>
+          </div>
+     </section>
+
+     <section id="features">
+          
+          <div class="container col-xxl-9 d-flex row gap-3" style="margin: 50px auto 20px;">
+               <div class="features-text col-lg-4">
+                    <p> JellyAce Permaculture & it's Features </p>
+               </div>
+               <div class="features-card col">
+                    <div class="">
+                         <p class="fw-bold">Phasellus accumsan imperdiet tempor. Cras tincidunt, arcu nec eleifend porttitor, orci est vehicula </p>
+                         <p class="lg-text">Proin id ligula dictum, convallis enim ut, facilisis massa. Mauris a nisi ut sapien blandit imperdie
+                              Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed posuere egestas nunc ut tempus.
+                         </p>
                     </div>
-                    <div class="col-lg-6">
-                         <h1 class="display-5 fw-bold lh-2 mb-3">Help Us End Hunger Today</h1>
-                         <p class="lead fw-lighter">Join the fight against hunger by donating food to those in need. Together, we can make a difference in the lives of families across our barangays. Your contribution provides meals to those who need them most.</p>
-                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                              <a class="btn btn-primary btn-lg px-4 me-md-2" href="/register">Join us</a>
-                              <a class="btn text-white btn-lg px-4 my-border" href="">Learn How It Works</a>
+                    <div class="d-flex justify-content-between features-img row">
+                         <div class="cards col">
+                              <img src="/images/perma.svg" alt="">
+                              <p>Permaculture Crop Planting</p>
                          </div>
+                         <div class="cards col">
+                              <img src="/images/notification.svg" alt="">
+                              <p>Alerts and Notification</p>
+                         </div>
+                         <div class="cards col">
+                              <img src="/images/weather.svg" alt="">
+                              <p>Weather Data Forecast</p>
+                         </div>
+                         <div class="cards col">
+                              <img src="/images/disease.svg" alt="">
+                              <p>Plant Disease Identification</p>
+                         </div>
+                         <div class="cards col">
+                              <img src="/images/community.svg" alt="">
+                              <p>Community Forum</p>
+                         </div>
+                         <div class="cards col">
+                              <img src="/images/ai.svg" alt="">
+                              <p>Artificial Intelligence Chatbot</p>
+                         </div>
+                         
                     </div>
                </div>
           </div>
+
      </section>
 
      <section id="second-page">
