--- a/views/partials/LandingPageHeader.ejs
+++ b/views/partials/LandingPageHeader.ejs
@@ -21,35 +21,40 @@
           
      </head>
      <body>
-          
+      
+    
+
           <section id="hero-section">
-          <nav class="navbar navbar-expand-lg navbar-dark">
-               <div class="container col-xxl-9">
-                 <a class="navbar-brand" href="#">Excessify</a>
-                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-                 </button>
-                 <div class="collapse navbar-collapse" id="navbarNav">
-                   <ul class="navbar-nav ms-auto">
-                     <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="/">Home</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link" href="#">About</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link" href="#">Services</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="nav-link" href="#">Contact</a>
-                     </li>
-                     <li class="nav-item">
-                       <a class="btn btn-primary ml-3" href="/login">Sign In</a>
-                     </li>
-                   </ul>
-                 </div>
-               </div>
-             </nav>
+          
+            <div class="container col-xxl-9">
+              <nav class="navbar navbar-expand-lg">
+                  <a class="navbar-brand text-white" href="/"> <img src="/images/logo-nav.svg" alt=""></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarColor03">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                      <li class="nav-item ">
+                        <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-white" href="#">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Services</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Contact</a>
+                      </li>
+                    </ul>
+                    <div class="d-flex gap-2 ">
+                        <a class="btn border-white text-white" href="/login">Login</a>
+                        <a class="btn border-white text-white" href="/sign-up">Sign Up</a>
+                    </div>
+                  </div>
+              </nav>
+            </div>
 
                  <!-- LOADING ANIMATION -->
                  <style>
