--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -9,6 +9,9 @@
 p{
     font-size: 16px;
 }
+body{
+    background-color: #e9f2ef;
+}
 a{
     color: black;
     text-decoration: none;
@@ -16,19 +19,21 @@ a{
 .fsize-13{
     font-size: 13px;
 }
-.chat-container{
-
-    max-height: 400px;
-}
 
 .chat-messages {
-    height: 400px;
+    background-color: #bde3d2;
+    height: 500px;
     overflow-x: hidden;
     overflow-y: scroll;
     flex: 1;
     padding: 10px;
+    border-radius: 8px;
 }
-
+.chat-container{
+    border: 1px solid rgb(219, 218, 218);
+    border-radius: 8px;
+    margin-top: 10px;
+}
 .message {
     margin: 10px 0;
     padding: 10px;
@@ -95,17 +100,6 @@ a{
     width: 40px;
     height: 40px;
     border-radius: 50%;
-}
-
-/* Minimized state */
-.chat-container.minimized {
-    height: 50px;
-    width: 400px;
-}
-
-.chat-container.minimized .chat-messages,
-.chat-container.minimized .chat-input {
-    display: none;
 }
 
 .chat-header button {
@@ -218,41 +212,42 @@ a{
         display: inline-block;
         padding: 10px 20px;
         font-size: 16px;
-        color: #fff;
-        background-color: #007bff;
-        border: 1px solid #007bff;
+        border: 1px solid black;
         border-radius: 5px;
         cursor: pointer;
         text-align: center;
     }
 
     .custom-file-upload:hover {
-        background-color: #0056b3;
-        border-color: #0056b3;
+        background-color: rgb(208, 242, 220);
     }
 
     /* Style the submit button */
     .submit-button {
+        max-width: 250px;
+        width: 100%;
         display: inline-block;
         padding: 10px 20px;
         font-size: 16px;
-        color: #fff;
-        background-color: #28a745;
-        border: 1px solid #28a745;
+        color: black;
+        border: 1px solid black;
         border-radius: 5px;
         cursor: pointer;
-        margin-left: 10px;
+    }
+    .submit-button:hover{
+        background-color: rgb(208, 242, 220);
     }
 
-    .submit-button:hover {
-        background-color: #218838;
-        border-color: #1e7e34;
-    }
     .image-preview{
       width: 200px; 
       height: 200px;
       object-fit: cover;
     }
+    .camera-preview{
+        width: 200px; 
+        height: 200px;
+        object-fit: cover;
+      }
 
 /* HAMBURGER ANIMATION */
 .menu-bar {
@@ -283,3 +278,11 @@ a{
 .rotated {
     transform: rotate(180deg);
 }
+
+/* CHART */
+.chart-container {
+    width: 100%; /* Adjust width as needed */
+    max-width: 600px; /* Adjust max width as needed */
+    height: 300px; /* Fixed height */
+    position: relative; /* Ensure the canvas fits within the container */
+  }
