--- a/views/community.ejs
+++ b/views/community.ejs
@@ -5,11 +5,11 @@
         <button id="menu-toggle" class="btn">
             <i class="fas fa-bars" id="menuIcon"></i>
         </button>
+        <p class="m-0">Community</p>
+
     </nav>
 
 <div class="container">
-
-        <p class="h4">Community</p>
 
         <div id="comments">
             <!-- Comments will be loaded here -->
