--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,25 +2,40 @@
 
 
    <div id="page-content-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button id="menu-toggle" class="btn">
-            <i class="fas fa-bars" id="menuIcon"></i>
-        </button>
+    <nav class="navbar navbar-expand-lg bg-light navbar-light d-flex align-items-center">
+        <div>
+            <button id="menu-toggle" class="btn">
+                <i class="fas fa-bars" id="menuIcon"></i>
+            </button>
+        </div>
+        <div>
+            <p class="h3 m-0">Welcome Back, <strong><%= name  %>!</strong></p>
+        </div>
+      
+      
     </nav>
        <!-- Page Content -->
         <div class="container">    
+            <div class="chart-container">
+                <canvas id="myChart"></canvas>
+              </div>
             <p class="h5">Plants That Need to Be Watered</p>
-            <div class="container-water d-flex gap-3">
-                <% plants.filter(plant => plant.needsWatering).forEach(plant => { %>
-                    <div class="not-watered-plants">
-                        <%= plant.name %>
-                        <form action="/water-plant/<%= plant._id %>" method="POST" style="display: inline">
-                            <button type="submit" class="btn btn-success btn-sm ml-2">Water</button>
-                        </form>
-                        <p style="width: 300px;">Last Watered: <%= plant.lastWatered ? new Date(plant.lastWatered).toLocaleDateString() : 'Not yet watered' %></p>
-                    </div>
-                <% }) %>
-            </div>
+            <% if(locals.plant){ %>
+                <div class="container-water d-flex gap-3">
+                    <% plants.filter(plant => plant.needsWatering).forEach(plant => { %>
+                        <div class="not-watered-plants">
+                            <%= plant.name %>
+                            <form action="/water-plant/<%= plant._id %>" method="POST" style="display: inline">
+                                <button type="submit" class="btn btn-success btn-sm ml-2">Water</button>
+                            </form>
+                            <p style="width: 300px;">Last Watered: <%= plant.lastWatered ? new Date(plant.lastWatered).toLocaleDateString() : 'Not yet watered' %></p>
+                        </div>
+                    <% }) %>
+                </div>
+            <% }else{ %>
+                <p>Nice, all plants are hydrated.</p>
+            <% } %>
+           
 
             <a href="/add-plant" class="btn btn-primary mb-3 my-3">Add plant</a>
             <p class="h5">My Plants</p>
@@ -61,6 +76,29 @@
 <!-- jQuery and DataTables JS -->
 
 <script>
+    
+    var ctx = document.getElementById('myChart').getContext('2d');
+  var myChart = new Chart(ctx, {
+      type: 'line', // Change this to 'bar', 'pie', etc., depending on the chart type you want
+      data: {
+          labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+          datasets: [{
+              label: 'My First Dataset',
+              data: [65, 59, 80, 81, 56, 55, 40],
+              fill: false,
+              borderColor: 'rgb(75, 192, 192)',
+              tension: 0.1
+          }]
+      },
+      options: {
+          scales: {
+              y: {
+                  beginAtZero: true
+              }
+          }
+      }
+  });
+
      $(document).ready(function() {
        $('#plantsTable').DataTable();
      });
