--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/LandingPageHeader.ejs") %>
 
-          <div class="container col-xxl-9 text-white text-center p-5">
+          <div class="container col-xxl-9 text-white text-center py-5">
                <p style="font-size: clamp(80px,10vw,150px) ; line-height: 1;" class="fw-bold p-0 mt-5">PROJECT SEED</p>
                <p style="font-size: clamp(10px,10vw,30px);" class="fw-lighter">JELLY ACE GROUP</p>
                <button class="discover-btn btn">DISCOVER</button>
@@ -20,7 +20,7 @@
                               Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed posuere egestas nunc ut tempus.
                          </p>
                     </div>
-                    <div class="d-flex justify-content-between features-img row">
+                    <div class="d-flex justify-content-between features-img row mt-5">
                          <div class="cards col">
                               <img src="/images/perma.svg" alt="">
                               <p>Permaculture Crop Planting</p>
@@ -50,98 +50,100 @@
                </div>
           </div>
 
-     </section>
-
-     <section id="second-page">
-          <div class="container d-flex justify-content-center col-xxl-9 px-4 py-5 my-4">
-               <div class="row text-center how-it-work-container">
-                    <div class="col" style="min-width: 367px;">
-                         <div class="p-4 rounded-circle">
-                              <img src="images/food-donation.png" alt="sample" width="100%">
-                         </div>
-                         <p class="h5 fw-bold mt-3">Donate Food</p>
-                         <p> People can choose to donate non-perishable items through drop-off locations.</p>
-                    </div>
-                    <div class="col" style="min-width: 367px;">
-                         <div class="p-4 rounded-circle">
-                              <img src="images/distribution.png" alt="sample"  width="100%">
-                         </div>
-                         <p class="h5 fw-bold mt-3">Distribution</p>
-                         <p>Food is collected and distributed to barangays.</p>
-                    </div>
-                    <div class="col"style="min-width: 367px;">
-                         <div class="p-4 rounded-circle">
-                              <img src="images/homeless.png" alt="sample"  width="100%">
-                         </div>
-                         <p class="h5 fw-bold mt-3">Reaching Those in Need</p>
-                         <p>Barangays ensure the food reaches families facing hunger.</p>
-                    </div>
-               </div>
-          </div>
-     </section>
-
-     <section id="impact-statistic">
-          <div class="container col-xxl-9 px-4 py-5 text-center my-4">
-               <div class="d-flex justify-content-center">
-                    <p class="h1 fw-bold">Our Impact So Far</p>
-               </div>
-               <div class="row d-flex justify-content-between mt-4">
-                    <div class="col">
-                         <p class="h1 fw-bold">13,000</p> 
-                         <p class="h2">Foods Provided</p>
-                         <p>to individuals and families facing food insecurity.</p>
-                    </div>
-                    <div class="col">
-                         <p class="h1 fw-bold">2291</p> 
-                         <p class="h2">People Helped</p>
-                         <p>across various barangays have received regular food support.</p>
-                    </div>
-                    <div class="col">
-                         <p class="h1 fw-bold">12</p> 
-                         <p class="h2">Barangays Served</p>
-                         <p>to ensure food is reaching the most vulnerable households.</p>
-                    </div>
-               </div>
-             
-          </div>
-     </section>
-
-    
-
-     <section id="third-page">
           <div class="container col-xxl-9">
-               <h2 class="text-center third-title">Lorem Ipsum is simply</h2>
-               <p class="text-center third-text">Welcome to Burger Bliss, where we take your cravings to a whole new level! Our mouthwatering burgers are made from 100% beef and are served on freshly baked buns.</p>
+               <p class="d-flex flex-column fw-bolder" style="font-size: 90px; line-height: 1.1;">
+                    <span>Awesome</span>
+                    <span style="color: #4ECB71;"> Harvest of</span>
+                    <span style="color: #FFFF86;">Crops</span>
+               </p>
+          </div>
 
-               <div class="div d-flex flex-lg-row flex-md-column flex-sm-column justify-content-center pt-5">
-                    <div class="row d-flex flex-md-column flex-sm-column">
-                         <div class="col-auto flex-sm-column py-4 px-4">
-                              <p class="third-second-title">Lorem Ipsum is simply dummy</p>
-                              <p>Welcome to Burger Bliss, where we take your cravings to a whole new level! Our mouthwatering burgers are made from 100% beef and are served on freshly baked buns.</p>
-                              <img class="card-pictures" src="/images/first-image.svg" alt="" width="100%" />
-                         </div>
-                         <div class="col-auto py-4 px-4">
-                              <p>Lorem Ipsum is simply dummy</p>
-                              <p>Welcome to Burger Bliss, where we take your cravings to a whole new level! Our mouthwatering burgers are made from 100% beef and are served on freshly baked buns.</p>
-                              <img class="card-pictures" src="/images/third-image.svg" alt="" width="100%" />
-                         </div>
+          <div class="container col-xxl-9">
+               <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                         <p class="h3 fw-bolder">The Most Producing Crops</p>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua.</p>
+                         <p class="lg-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                         <p class="lg-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
-
-                    <div class="row d-flex flex-md-column flex-sm-column">
-                         <div class="col-auto py-4 px-4">
-                              <p>Lorem Ipsum is simply dummy</p>
-                              <p>Welcome to Burger Bliss, where we take your cravings to a whole new level! Our mouthwatering burgers are made from 100% beef and are served on freshly baked buns.</p>
-                              <img class="card-pictures" src="/images/second-image.svg" alt="" width="100%" />
-                         </div>
-                         <div class="col-auto py-4 px-4">
-                              <p>Lorem Ipsum is simply dummy</p>
-                              <p>Welcome to Burger Bliss, where we take your cravings to a whole new level! Our mouthwatering burgers are made from 100% beef and are served on freshly baked buns.</p>
-                              <img class="card-pictures" src="/images/fourth-image.svg" alt="" width="100%" />
-                         </div>
+                    <div class="col-lg-6">
+                         <img src="/images/vegetable.png" width="100%" alt="">
                     </div>
                </div>
+               
+          </div>
+
+     </section>
+
+     <section id="customers-section">
+          <div class="container col-xxl-9 d-flex flex-column align-items-center mt-5">
+               <p class="h1 fw-bold d-flex flex-column align-items-center">
+                    <span>What Our</span>
+                    <span>Customers Say</span> 
+               </p>
+               <div class="green-line"></div>
+               <p class="lg-text mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+
+               <div class="container my-5">
+                    <div id="ratingsCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <!-- Carousel Items -->
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                         <div class="d-flex flex-column align-items-center custom-shadow">
+                              <div class="rating mt-4">★★★★☆</div>
+                              <p class="mt-3 p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+                              <div style="width: 100px; height: 100px;">
+                                   <img style="width: 100%; border-radius: 50px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyAu6acC2ZQ_TmFRon-lg0KqtdrxDpqUBCVA&s" alt="User Image">
+                              </div>
+                              <div class="mt-3">
+                                   <p class="m-0 fw-bold">Monkey D. Luffy</p>
+                                   <p>CEO</p>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="carousel-item">
+                         <div class="d-flex flex-column align-items-center custom-shadow">
+                              <div class="rating mt-4">★★★★☆</div>
+                              <p class="mt-3 p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+                              <div style="width: 100px; height: 100px;">
+                                   <img style="width: 100%; border-radius: 50px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyAu6acC2ZQ_TmFRon-lg0KqtdrxDpqUBCVA&s" alt="User Image">
+                              </div>
+                              <div class="mt-3">
+                                   <p class="m-0 fw-bold">Monkey D. Luffy</p>
+                                   <p>CEO</p>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="carousel-item">
+                         <div class="d-flex flex-column align-items-center custom-shadow">
+                              <div class="rating mt-4">★★★★☆</div>
+                              <p class="mt-3 p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+                              <div style="width: 100px; height: 100px;">
+                                   <img style="width: 100%; border-radius: 50px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyAu6acC2ZQ_TmFRon-lg0KqtdrxDpqUBCVA&s" alt="User Image">
+                              </div>
+                              <div class="mt-3">
+                                   <p class="m-0 fw-bold">Monkey D. Luffy</p>
+                                   <p>CEO</p>
+                              </div>
+                          
+                         </div>
+                    </div>
+                    </div>
+
+                    <!-- Indicators (Dots) -->
+                    <div class="carousel-indicators">
+                         <button type="button" data-bs-target="#ratingsCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                         <button type="button" data-bs-target="#ratingsCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                         <button type="button" data-bs-target="#ratingsCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                     
+                    </div>
+                  </div>
+               
           </div>
      </section>
+
+     
 
 
 </body>
