--- a/views/partials/LandingPageFooter.ejs
+++ b/views/partials/LandingPageFooter.ejs
@@ -1,5 +1,5 @@
 
- <div class="container">
+ <div class="container col-xxl-9">
   <footer class="py-5">
     <div class="row">
       <div class="col-6 col-md-2 mb-3">
