--- a/views/partials/LandingPageHeader.ejs
+++ b/views/partials/LandingPageHeader.ejs
@@ -9,7 +9,7 @@
           <meta property="og:image" content="/images/excessify.png" />
           <meta property="og:url" content="https://www.yoursite.com" />
 
-          <link rel="icon" href="/images/excessify.png" type="image/x-icon" />
+          <link rel="icon" href="/images/logo copy.svg" type="image/x-icon" />
 
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -17,7 +17,7 @@
           <link rel="stylesheet" href="/styles/responsive.css" />
           <link rel="stylesheet" href="/styles/landingpage.css" />
 
-          <title>Jelly Ace</title>
+          <title>Project Seed</title>
           
      </head>
      <body>
@@ -50,7 +50,7 @@
                     </ul>
                     <div class="d-flex gap-2 ">
                         <a class="btn border-white text-white" href="/login">Login</a>
-                        <a class="btn border-white text-white" href="/sign-up">Sign Up</a>
+                        <a class="btn border-white text-white" href="/register">Sign Up</a>
                     </div>
                   </div>
               </nav>
