--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -93,11 +93,11 @@
                               <div class="rating mt-4">★★★★☆</div>
                               <p class="mt-3 p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
                               <div style="width: 100px; height: 100px;">
-                                   <img style="width: 100%; border-radius: 50px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyAu6acC2ZQ_TmFRon-lg0KqtdrxDpqUBCVA&s" alt="User Image">
+                                   <img style="width: 100%; border-radius: 50px;" src="/images/ceo.png" alt="User Image">
                               </div>
                               <div class="mt-3">
-                                   <p class="m-0 fw-bold">Monkey D. Luffy</p>
-                                   <p>CEO</p>
+                                   <p class="m-0 fw-bold">Nicole Pajares</p>
+                                   <p class="lg-text">CEO</p>
                               </div>
                          </div>
                     </div>
@@ -110,7 +110,7 @@
                               </div>
                               <div class="mt-3">
                                    <p class="m-0 fw-bold">Monkey D. Luffy</p>
-                                   <p>CEO</p>
+                                   <p class="lg-text">CEO</p>
                               </div>
                          </div>
                     </div>
@@ -123,7 +123,7 @@
                               </div>
                               <div class="mt-3">
                                    <p class="m-0 fw-bold">Monkey D. Luffy</p>
-                                   <p>CEO</p>
+                                   <p class="lg-text">CEO</p>
                               </div>
                           
                          </div>
