--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/LandingPageHeader.ejs") %>
 
           <div class="container col-xxl-9 text-white text-center py-5">
-               <p style="font-size: clamp(80px,10vw,150px) ; line-height: 1;" class="fw-bold p-0 mt-5">PROJECT SEED</p>
+               <p style="font-size: clamp(70px,10vw,150px) ; line-height: 1;" class="fw-bold p-0 mt-5">PROJECT SEED</p>
                <p style="font-size: clamp(10px,10vw,30px);" class="fw-lighter">JELLY ACE GROUP</p>
                <button class="discover-btn btn">DISCOVER</button>
           </div>
@@ -51,7 +51,7 @@
           </div>
 
           <div class="container col-xxl-9">
-               <p class="d-flex flex-column fw-bolder" style="font-size: 90px; line-height: 1.1;">
+               <p class="d-flex flex-column fw-bolder" style="font-size: clamp(40px , 10vw, 90px); line-height: 1.1;">
                     <span>Awesome</span>
                     <span style="color: #4ECB71;"> Harvest of</span>
                     <span style="color: #FFFF86;">Crops</span>
