--- a/public/styles/landingpage.css
+++ b/public/styles/landingpage.css
@@ -324,10 +324,10 @@ div.col.col-sm-12.py-4.px-4 p:last-child {
     .carousel-item {
         min-height: 400px;
         text-align: center;
-        padding: 5px;
+        padding: 30px;
       }
       .custom-shadow{
-        box-shadow: 1px 1px 10px rgb(188, 188, 188);
+        box-shadow: 1px 1px 10px black;
       }
       .rating {
         font-size: 24px;
